--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
   <meta name="author" content="">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--
   <base href="iarigby.github.io/sircxvilia" target="_blank">
-  -- --> <!--
-  -- -->
-
-  <base href="localhost:2000/">
-  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -37,7 +31,7 @@
         return li
     }
     function main() {
-        Get('localhost:2000/data/list.json', (res) => {
+        Get(base_href + '/data/list.json', (res) => {
             console.log(res)
             const list = JSON.parse(res.responseText)
             const url = 'data/images/kaladze.jpg'
